# getting-started

./: .gitignore  README.md  all.js  local_checker.py
C/: bot.c
clojure/: upgrade_bot.clj
csharp/: UpgradeBot.cs  UpgradeBot.csproj
csharp/Properties/: AssemblyInfo.cs
erlang/: bot.erl
ghcjs/: Main.hs  replay.cabal
haskell/: BotLib.hs  BullyBot.hs  Channel.hs  IdleBot.hs  JSON.hs  Judge.hs  Maps.hs  Report.hs  SabbaticalBot.hs  TCPIdleBot.hs  Types.hs  Util.hs  aicontest.cabal  warnings
java/: build.xml
java/src/: Planet.java  UpgradeBot.java  World.java
piet/: README
python/: random_bot.py
ruby/: upgrade_bot.rb
