name:                replay
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
-- author:              
maintainer:          divanov@machinezone.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable replay
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:
      base >=4.7
    , aeson
    , bytestring
    , ghcjs-base
    , ghcjs-canvas
    , ghcjs-dom
    , ghcjs-jquery
    , scientific
    , text
    , time
    , vector
  hs-source-dirs:
    ., ../haskell
  ghc-options: -Wall -ferror-spans -O2
  default-language:    Haskell2010